--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,6 +44,7 @@ subjects:
 - !lcsh 'Missions -- Philippines'
 - !lcc 'DS'
 - !lcsh 'Demarcation line of Alexander VI'
+- GITenberg
 title: "The Philippine Islands, 1493-1898—Volume 34 of 55\r\nExplorations by early\
   \ navigators, descriptions of the islands and their peoples, their history and records\
   \ of the catholic missions, as related in contemporaneous books and manuscripts,\
